--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,10 @@
             android:id="@+id/button"
             android:layout_width="271dp"
             android:layout_height="66dp"
-            android:elevation="0dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0"
+            android:elevation="15dp"
+            android:gravity="center_vertical|center_horizontal"
             android:text="確定"
             android:visibility="visible"
             tools:layout_editor_absoluteX="16dp"
