--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="34dp"
-            android:text="性別"
+            android:text="@string/sex"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.051"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="(輸入性別)"
+            android:text="@string/inputsex"
             android:visibility="visible"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="47dp" />
@@ -38,7 +38,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="39dp"
-            android:text="年齡"
+            android:text="@string/age"
             android:visibility="visible"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="112dp" />
@@ -49,20 +49,21 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="(輸入年齡)"
+            android:text="@string/inputage"
             android:visibility="visible"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="145dp" />
 
         <Button
             android:id="@+id/button"
-            android:layout_width="271dp"
-            android:layout_height="66dp"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0"
-            android:elevation="15dp"
+            android:elegantTextHeight="false"
+            android:elevation="0dp"
             android:gravity="center_vertical|center_horizontal"
-            android:text="確定"
+            android:text="@string/ok"
             android:visibility="visible"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="214dp" />
