--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="34dp"
             android:text="@string/sex"
+            android:textSize="25sp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.051"
@@ -39,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="39dp"
             android:text="@string/age"
+            android:textSize="25sp"
             android:visibility="visible"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="112dp" />
@@ -72,7 +74,8 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:text="@string/txtR" />
+            android:text="@string/txtR"
+            android:textSize="28sp" />
 
     </LinearLayout>
 
